@@ -1,4 +1,4 @@
 
-### Types::Bool
+### Data::Bool
 
 Booleans as objects for Perl
