@@ -1,4 +1,4 @@
-name    = Types-Bool
+name    = Data-Bool
 author  = Adriano Ferreira <ferreira@cpan.org>
 license = Perl_5
 copyright_holder = Adriano Ferreira
@@ -29,8 +29,8 @@ Types::Serialiser = 0
 [Test::ReportPrereqs]
 
 [MetaResources]
-homepage          = https://github.com/aferreira/cpan-Types-Bool
-bugtracker.web    = https://github.com/aferreira/cpan-Types-Bool/issues
-repository.url    = https://github.com/aferreira/cpan-Types-Bool.git
-repository.web    = https://github.com/aferreira/cpan-Types-Bool
+homepage          = https://github.com/aferreira/cpan-Data-Bool
+bugtracker.web    = https://github.com/aferreira/cpan-Data-Bool/issues
+repository.url    = https://github.com/aferreira/cpan-Data-Bool.git
+repository.web    = https://github.com/aferreira/cpan-Data-Bool
 repository.type   = git
